--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
                     <span class="text-shadow-md-green">13</span>
                 </p>
                 <p class="text-2xl"
-                    style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal; line-height: 1.4 !important;">
+                    style="font-family: 'futura-pt', sans-serif; font-weight: 300; font-style: normal; line-height: 1.4 !important;">
                     professional grade courts<br>open all year round
                 </p>
             </div>
@@ -73,52 +73,84 @@
     </div>
 </section>
 
-<!-- <section id="memberships"
-    class="container mx-auto px-2 sm:px-6 lg:px-8 mt-10 text-center border-b-2 border-b-gray-300 pb-20">
+<section id="memberships" class="container mx-auto mt-16 text-center border-b-2 border-b-gray-300 pb-20">
     <h1 class="inline-block text-4xl md:text-6xl mx-16 sm:mx-8"
         style="font-family: 'futura-pt', sans-serif; font-weight: 500; font-style: normal;">
-        Member court rates</h1>
+        Member Court Rates</h1>
 
-    <article class="mt-16 flex justify-center">
-        <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-            <div class="p-2 border-2 border-maddie-green rounded-xl">
-
-
-                <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-gray-200 p-6 rounded-lg shadow-lg">
-                    <dt class="text-base leading-5 text-gray-600">13 dedicated pickleball courts.</dt>
-                    <dt class="text-base leading-5 text-gray-600">Available for open play, leagues, tournaments,
-                        clinics, and more!</dt>
-                    <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-3xl">
-                        Thirteen.
+    <article class="mt-12 flex justify-center">
+        <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center md:grid-cols-3">
+            <div class="p-2 border-2 border-maddie-green rounded-xl text-black"
+                style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal">
+                <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-maddie-cream p-4 rounded-lg shadow-lg">
+                    <dt class="text-base leading-5"><span class="text-4xl">weekdays</span><br><span class="text-lg">6 am
+                            -
+                            4
+                            pm</span></dt>
+                    <dt class="text-base leading-5 mt-5"><a routerLink="/reserve"
+                            class="no-underline rounded-md px-3 py-1 text-xl bg-maddie-red hover:bg-red-700 text-white hover:text-grey-200 visited:text-white hover:cursor-pointer"
+                            style="font-family: 'futura-pt', sans-serif; font-weight: 500; font-style: normal">BOOK
+                            NOW</a>
+                    </dt>
+                    <dd class="order-first">
+                        <span class="align-top text-3xl">$</span><span class="text-8xl">16</span><span
+                            class="text-4xl">/hr</span>
                     </dd>
                 </div>
             </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-gray-200 p-6 rounded-lg shadow-lg">
-                <dt class="text-base leading-5 text-gray-600">True outdoor court surfaces, permanent nets.
-                </dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-3xl">
-                    Professional grade.</dd>
+            <div class="p-2 border-2 border-maddie-green rounded-xl text-black"
+                style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal">
+                <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-maddie-cream p-4 rounded-lg shadow-lg">
+                    <dt class="text-base leading-5"><span class="text-4xl">weekdays</span><br><span class="text-lg">4 pm
+                            -
+                            12
+                            am</span></dt>
+                    <dt class="text-base leading-5 mt-5"><a routerLink="/reserve"
+                            class="no-underline rounded-md px-3 py-1 text-xl bg-maddie-red hover:bg-red-700 text-white hover:text-grey-200 visited:text-white hover:cursor-pointer"
+                            style="font-family: 'futura-pt', sans-serif; font-weight: 500; font-style: normal">BOOK
+                            NOW</a>
+                    </dt>
+                    <dd class="order-first">
+                        <span class="align-top text-3xl">$</span><span class="text-8xl">22</span><span
+                            class="text-4xl">/hr</span>
+                    </dd>
+                </div>
             </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-gray-200 p-6 rounded-lg shadow-lg">
-                <dt class="text-base leading-5 text-gray-600">Forget about snow and rain!</dt>
-                <dt class="text-base leading-5 text-gray-600">Open 6AM-midnight, 7 days/week.</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-3xl">
-                    Open all year round.</dd>
+            <div class="p-2 border-2 border-maddie-green rounded-xl text-black"
+                style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal">
+                <div class="mx-auto flex max-w-md flex-col gap-y-4 bg-maddie-cream p-4 rounded-lg shadow-lg">
+                    <dt class="text-base leading-5"><span class="text-4xl">weekends</span><br><span class="text-lg">6 am
+                            -
+                            12
+                            am</span></dt>
+                    <dt class="text-base leading-5 mt-5"><a routerLink="/reserve"
+                            class="no-underline rounded-md px-3 py-1 text-xl bg-maddie-red hover:bg-red-700 text-white hover:text-grey-200 visited:text-white hover:cursor-pointer"
+                            style="font-family: 'futura-pt', sans-serif; font-weight: 500; font-style: normal">BOOK
+                            NOW</a>
+                    </dt>
+                    <dd class="order-first">
+                        <span class="align-top text-3xl">$</span><span class="text-8xl">28</span><span
+                            class="text-4xl">/hr</span>
+                    </dd>
+                </div>
             </div>
         </dl>
-
-
     </article>
-</section> -->
+    <article class="mt-8">
+        <div class="text-2xl" style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal">
+            *membership required to book courts
+        </div>
+    </article>
+</section>
 
 <!-- Memberships -->
 <section id="memberships"
-    class="container mx-auto px-2 sm:px-6 lg:px-8 mt-10 text-center border-b-2 border-b-gray-300 pb-20">
+    class="container mx-auto px-2 sm:px-6 lg:px-8 mt-16 text-center border-b-2 border-b-gray-300 pb-20">
     <h1 class="inline-block text-4xl md:text-6xl mx-16 sm:mx-8"
         style="font-family: 'futura-pt', sans-serif; font-weight: 500; font-style: normal;">
-        Become a member</h1>
+        Become a Member</h1>
 
-    <article class="mt-16 flex justify-center">
+    <article class="mt-12 flex justify-center">
         <table class="mx-8 lg:mx-0">
             <!-- Headers -->
             <thead class="border-b-2 border-maddie-green">
