installed headwind (awesome)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,12 +15,12 @@
     </p>
 </article> -->
 
-<div class="container mx-auto px-2 sm:px-6 lg:px-8">
+<div class="container px-2 mx-auto sm:px-6 lg:px-8">
     <section class="md:flex mt-36">
-        <article class="mb-10 md:md-0 p-5">
-            <div class="lg:grid lg:grid-cols-2 mb-6">
-                <h2 class="mb-6 lg:mb-0 self-center text-5xl font-header text-center">The Douglass Family</h2>
-                <div class="justify-self-start rounded h-10/12 bg-striped rotate-3 p-6 shadow-2xl">
+        <article class="p-5 mb-10 md:md-0">
+            <div class="mb-6 lg:grid lg:grid-cols-2">
+                <h2 class="self-center mb-6 text-5xl text-center lg:mb-0 font-header">The Douglass Family</h2>
+                <div class="p-6 rounded shadow-2xl justify-self-start h-10/12 bg-striped rotate-3">
                     <img src="douglassFamily.jpg" />
                 </div>
             </div>
@@ -73,9 +73,9 @@
         </article>
 
         <article class="p-5">
-            <div class="lg:grid lg:grid-cols-2 mb-6">
-                <h2 class="mb-6 lg:mb-0 self-center text-5xl font-header text-center">The Lanning Family</h2>
-                <div class="justify-self-start rounded w-10/12 bg-striped -rotate-3 p-6 shadow-2xl">
+            <div class="mb-6 lg:grid lg:grid-cols-2">
+                <h2 class="self-center mb-6 text-5xl text-center lg:mb-0 font-header">The Lanning Family</h2>
+                <div class="w-10/12 p-6 rounded shadow-2xl justify-self-start bg-striped -rotate-3">
                     <img src="lanningFamily.jpg" />
                 </div>
             </div>
