--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="fixed top-o w-full z-50">
+<header class="fixed z-50 w-full top-o">
   <div #banner id="banner"
     class="hidden md:flex relative isolate items-center gap-x-6 overflow-hidden bg-gray-50 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
     <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl"
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
-      <p class="text-sm text-center leading-6 text-gray-900">
+      <p class="text-sm leading-6 text-center text-gray-900">
         <strong class="font-semibold">Des Moines Pickleball Team Classic</strong><svg viewBox="0 0 2 2"
           class="mx-2 inline h-0.5 w-0.5 fill-current" aria-hidden="true">
           <circle cx="1" cy="1" r="1" />
@@ -23,7 +23,7 @@
           class="mx-2 inline h-0.5 w-0.5 fill-current" aria-hidden="true">
           <circle cx="1" cy="1" r="1" />
         </svg><a
-          class="no-underline text-gray-900 hover:text-gray-950 visited:text-gray-900 hover:cursor-pointer">Proceeds
+          class="text-gray-900 no-underline hover:text-gray-950 visited:text-gray-900 hover:cursor-pointer">Proceeds
           will go to
           UnityPoint John Stoddard
           Cancer Center in
@@ -33,11 +33,11 @@
         class="flex-none rounded-full bg-gray-900 px-3.5 py-1 text-sm font-semibold text-white visited:text-white shadow-sm hover:bg-gray-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-900">Register
         now <span aria-hidden="true"></span></a> -->
     </div>
-    <div class="flex flex-1 justify-end">
+    <div class="flex justify-end flex-1">
       <button type="button" class="-m-3 p-3 focus-visible:outline-offset-[-4px]"
         (click)="banner.style.display = 'none'">
         <span class="sr-only">Dismiss</span>
-        <svg class="h-5 w-5 text-gray-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <svg class="w-5 h-5 text-gray-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path
             d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z" />
         </svg>
@@ -46,23 +46,22 @@
   </div>
 
   <nav id="nav" class="bg-gray-200">
-    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-      <div class="relative flex h-20 items-center justify-between">
-        <!-- Mobile Menu Icon -->
+    <div class="px-2 mx-auto max-w-7xl sm:px-6 lg:px-8">
+      <div class="relative flex items-center justify-between h-20">
         <div class="absolute inset-y-0 left-0 flex items-center lg:hidden">
           <!-- Mobile menu button-->
           <button type="button"
-            class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+            class="relative inline-flex items-center justify-center p-2 text-gray-400 rounded-md hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
             aria-controls="mobile-menu" aria-expanded="false" (click)="toggleMenu()">
             <span class="absolute -inset-0.5"></span>
             <span class="sr-only">Open main menu</span>
 
-            <svg *ngIf="mobileMenuHidden" class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            <svg *ngIf="mobileMenuHidden" class="block w-6 h-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
 
-            <svg *ngIf="!mobileMenuHidden" class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            <svg *ngIf="!mobileMenuHidden" class="block w-6 h-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
@@ -70,11 +69,11 @@
         </div>
 
         <!-- Dinks Logo-->
-        <div class="flex flex-1 items-center justify-center lg:items-stretch lg:justify-start">
-          <div class="flex flex-shrink-0 items-center">
+        <div class="flex items-center justify-center flex-1 lg:items-stretch lg:justify-start">
+          <div class="flex items-center flex-shrink-0">
             <a routerLink="home" class="hover:cursor-pointer hover:opacity-80">
-              <img class="hidden lg:block h-7 xl:h-10 w-auto" src="logos/combinedIconHorizontal.png" alt="Your Company">
-              <img class="lg:hidden h-10 w-auto" src="logos/logoIcon.png" alt="Your Company" (click)="toggleMenu(true)">
+              <img class="hidden w-auto lg:block h-7 xl:h-10" src="logos/combinedIconHorizontal.png" alt="Your Company">
+              <img class="w-auto h-10 lg:hidden" src="logos/logoIcon.png" alt="Your Company" (click)="toggleMenu(true)">
             </a>
           </div>
         </div>
@@ -82,35 +81,34 @@
         <!-- Desktop Nav -->
         <div class="absolute inset-y-0 right-0 flex items-center pr-2 lg:static lg:inset-auto lg:ml-6 lg:pr-0">
           <div class="flex">
-            <div class="hidden lg:block space-x-2">
+            <div class="hidden space-x-2 lg:block">
               <a routerLink="home"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900  hover:border-blue-900 hover:text-white visited:text-gray-900"
+                class="px-3 py-2 text-sm font-medium text-gray-900 no-underline border-2 rounded-md hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 border-blue-700 active-link"
                 onclick="window.scrollTo({ top: 0 })">Home</a>
               <!-- <a routerLink="rates-memberships"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900  hover:border-blue-900 hover:text-white visited:text-gray-900"
+                class="px-3 py-2 text-sm font-medium text-gray-900 no-underline border-2 rounded-md hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 border-blue-700 active-link">Rates</a> -->
               <a routerLink="leagues-tournaments"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
+                class="px-3 py-2 text-sm font-medium text-gray-900 no-underline border-2 rounded-md hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 border-blue-700 active-link"
                 onclick="window.scrollTo({ top: 0 })">Leagues/Tournaments</a>
               <a routerLink="instruction"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
+                class="px-3 py-2 text-sm font-medium text-gray-900 no-underline border-2 rounded-md hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 border-blue-700 active-link"
                 onclick="window.scrollTo({ top: 0 })">Instruction</a>
               <a routerLink="about"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
+                class="px-3 py-2 text-sm font-medium text-gray-900 no-underline border-2 rounded-md hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 border-blue-700 active-link" onclick="window.scrollTo({ top: 0 })">About
                 Us</a>
 
               <a href="https://maps.app.goo.gl/pfU4YHvtoYF1QonE9" target="_blank"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:text-gray-500 visited:text-gray-900">
-                <i class="material-icons align-middle inline-block mr-1">place</i>
-                <!-- 3800 Merle Hay Rd Suite 1000 -->
+                class="px-3 py-2 text-sm font-medium text-gray-900 no-underline rounded-md hover:text-gray-500 visited:text-gray-900">
+                <i class="inline-block mr-1 align-middle material-icons">place</i>
               </a>
 
               <a routerLink="reserve"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium text-maddie-red border-2 border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
+                class="px-3 py-2 text-sm font-medium no-underline border-2 rounded-md text-maddie-red border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
                 routerLinkActive="border-red-700 bg-red-700 active-link" onclick="window.scrollTo({ top: 0 })">Reserve
                 a court</a>
             </div>
@@ -118,7 +116,7 @@
             <div class="lg:hidden">
               <a href="http://maps.apple.com/?daddr=3800+Merle+Hay+Rd+Suite+1000,+Des+Moines+IA+50310" target="_blank"
                 class="no-underline text-maddie-slate hover:text-slate-700">
-                <i class="material-icons align-middle inline-block">place</i>
+                <i class="inline-block align-middle material-icons">place</i>
               </a>
             </div>
           </div>
@@ -129,85 +127,33 @@
 
     <!-- Mobile menu, show/hide based on menu state. -->
     <div #mobileMenu class="lg:hidden" id="mobile-menu" [hidden]="mobileMenuHidden" (click)="toggleMenu()">
-      <div class="space-y-1 px-2 pb-3 pt-2">
-        <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+      <div class="px-2 pt-2 pb-3 space-y-1">
         <a routerLink="home"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
+          class="block px-3 py-2 text-base font-medium text-gray-900 no-underline rounded-md hover:bg-blue-900 hover:text-white visited:text-gray-900"
           routerLinkActive="bg-blue-900 border-blue-790000 active-link" onclick="window.scrollTo({ top: 0 })">Home</a>
         <!-- <a routerLink="rates-memberships"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
+          class="block px-3 py-2 text-base font-medium text-gray-900 no-underline rounded-md hover:bg-blue-900 hover:text-white visited:text-gray-900"
           routerLinkActive="bg-blue-900 border-blue-900 active-link">Rates</a> -->
         <a routerLink="leagues-tournaments"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
+          class="block px-3 py-2 text-base font-medium text-gray-900 no-underline rounded-md hover:bg-blue-900 hover:text-white visited:text-gray-900"
           routerLinkActive="bg-blue-900 border-blue-900 active-link"
           onclick="window.scrollTo({ top: 0 })">Leagues/Tournaments</a>
         <a routerLink="instruction"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
+          class="block px-3 py-2 text-base font-medium text-gray-900 no-underline rounded-md hover:bg-blue-900 hover:text-white visited:text-gray-900"
           routerLinkActive="bg-blue-900 border-blue-900 active-link"
           onclick="window.scrollTo({ top: 0 })">Instruction</a>
         <a routerLink="about"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
+          class="block px-3 py-2 text-base font-medium text-gray-900 no-underline rounded-md hover:bg-blue-900 hover:text-white visited:text-gray-900"
           routerLinkActive="bg-blue-900 border-blue-900 active-link"
           onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">About</a>
         <a routerLink="reserve"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-maddie-red border-2 border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
+          class="block px-3 py-2 text-base font-medium no-underline border-2 rounded-md text-maddie-red border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
           routerLinkActive="border-red-700 bg-red-700 active-link"
           onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">Reserve
           a court</a>
       </div>
     </div>
   </nav>
-
-
-  <!-- desktop -->
-  <!-- <nav class="bg-gray-300 flex justify-between items-center p-5 max-xl:hidden">
-    <div><a [routerLink]="['/home']"><img src="logos/combinedIconHorizontal.png" /></a></div>
-    <div>
-      <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page">Home</a>
-      <a class="nav-button" [routerLink]="['/rates-memberships']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page">Rates/Memberships</a>
-      <a class="nav-button" [routerLink]="['/leagues-tournaments']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page">Leagues/Tournaments</a>
-      <a class="nav-button" [routerLink]="['/instruction']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page">Instruction</a>
-      <a class="nav-button" [routerLink]="['/faq']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page">FAQ</a>
-    </div>
-    <div [routerLink]="['/reserve']">
-      <button class="rounded bg-dinks-red hover:bg-dinks-red-dark text-white text-md px-5 py-2">
-        Reserve court
-      </button>
-    </div>
-  </nav> -->
-
-  <!-- mobile -->
-  <!-- <nav class="flex flex-col justify-start items-center p-5 xl:hidden">
-    <button class="absolute top-6 left-5 text-dinks-blue" (click)="toggleMenu()">
-      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
-        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-      </svg>
-    </button>
-    <button [routerLink]="['/home']">
-      <img class="h-8" src="logos/combinedIconHorizontal.png" />
-    </button>
-    @if(menu){
-    <div class="flex flex-col mt-5 -ml-3 self-start">
-      <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button" ariaCurrentWhenActive="page"
-        (click)="toggleMenu()">Home</a>
-      <a class="nav-button" [routerLink]="['/rates-memberships']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page" (click)="toggleMenu()">Rates/Memberships</a>
-      <a class="nav-button" [routerLink]="['/leagues-tournaments']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page" (click)="toggleMenu()">Leagues/Tournaments</a>
-      <a class="nav-button" [routerLink]="['/instruction']" routerLinkActive="active-nav-button"
-        ariaCurrentWhenActive="page" (click)="toggleMenu()">Instruction</a>
-      <a class="nav-button" [routerLink]="['/about']" routerLinkActive="active-nav-button" ariaCurrentWhenActive="page"
-        (click)="toggleMenu()">About us</a>
-      <a class="nav-button" [routerLink]="['/faq']" routerLinkActive="active-nav-button" ariaCurrentWhenActive="page"
-        (click)="toggleMenu()">FAQ</a>
-    </div>
-    }
-  </nav> -->
 </header>
 
 <main class="mb-52">
@@ -217,12 +163,12 @@
 
 
 <!-- <footer class="fixed bottom-0 w-screen">
-  <div class="p-5 flex flex-col bg-zinc-900">
+  <div class="flex flex-col p-5 bg-zinc-900">
     <button [routerLink]="['/reserve']"
-      class="rounded bg-dinks-red hover:bg-dinks-red-dark w-full text-white text-md mb-5 px-5 py-2 xl:hidden">
+      class="w-full px-5 py-2 mb-5 text-white rounded bg-dinks-red hover:bg-dinks-red-dark text-md xl:hidden">
       Reserve court
     </button>
-    <figure class="flex justify-between items-center">
+    <figure class="flex items-center justify-between">
       <a href="https://www.facebook.com/groups/380792678025831/" target="_blank">
         <img src="facebook.png">
       </a>
