--- a/src/app/destinations/destinations.component.html
+++ b/src/app/destinations/destinations.component.html
@@ -1,4 +1,4 @@
-<h1 class=" text-5xl text-center my-16 font-header">Pickleball Destination Trips</h1>
+<h1 class="my-16 text-5xl text-center  font-header">Pickleball Destination Trips</h1>
 
 <p class="text-center">
     Watch this page for upcoming Pickleball Destination Trips combining your vacay with the love ofPickleball
@@ -10,17 +10,17 @@
     on facebook!
 </p>
 
-<h2 class="text-3xl text-center font-header m-10"> Next Stop: All Inclusive getaway in beautiful Riviera Maya!</h2>
+<h2 class="m-10 text-3xl text-center font-header"> Next Stop: All Inclusive getaway in beautiful Riviera Maya!</h2>
 
 <article class="grid xl:grid-cols-3 max-xl:grid-cols-1">
-    <div class="m-5 flex flex-col justify-around">
-        <img class="rounded bg-striped shadow-xl p-3 -rotate-3" src="destinations/lazyRiver.jpg">
-        <img class="rounded bg-striped shadow-xl p-3 rotate-3" src="destinations/cabana2.jpg">
+    <div class="flex flex-col justify-around m-5">
+        <img class="p-3 rounded shadow-xl bg-striped -rotate-3" src="destinations/lazyRiver.jpg">
+        <img class="p-3 rounded shadow-xl bg-striped rotate-3" src="destinations/cabana2.jpg">
     </div>
-    <img class="rounded bg-striped shadow-xl p-3 h-5/6 justify-self-center self-center"
+    <img class="self-center p-3 rounded shadow-xl bg-striped h-5/6 justify-self-center"
         src="destinations/destinationsPamphlet.jpg">
-    <div class="m-5 flex flex-col justify-around">
-        <img class="rounded bg-striped shadow-xl p-3 rotate-3" src="destinations/cabanas.jpg">
-        <img class="rounded bg-striped shadow-xl p-3 -rotate-3" src="destinations/slides.jpg">
+    <div class="flex flex-col justify-around m-5">
+        <img class="p-3 rounded shadow-xl bg-striped rotate-3" src="destinations/cabanas.jpg">
+        <img class="p-3 rounded shadow-xl bg-striped -rotate-3" src="destinations/slides.jpg">
     </div>
 </article>
