--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,18 @@
+// h1,
+// h2,
+// span,
+// p,
+// a {
+//     // color: var(--tw-color-black);
+//     // // font-family: 'futura-pt', sans-serif;
+//     // font-weight: 400;
+//     // font-style: normal;
+// }
+
+// h1 {
+//     font-weight: 500;
+// }
+
 th,
 td {
     color: white;
