--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -1,47 +1,47 @@
 <!-- Leagues -->
-<div id="leagues" class="container mx-auto px-2 sm:px-6 lg:px-8">
-    <section class="mt-36 mb-10">
-        <h2 class="text-5xl mb-6 max-xl:text-center font-header">Leagues</h2>
+<div id="leagues" class="container px-2 mx-auto sm:px-6 lg:px-8">
+    <section class="mb-10 mt-36">
+        <h2 class="mb-6 text-5xl max-xl:text-center font-header">Leagues</h2>
         @for(l of leagues; track l){
 
-        <figure class="flex flex-col rounded border-2 border-neutral-400 bg-slate-800 w-full p-10 shadow-xl">
+        <figure class="flex flex-col w-full p-10 border-2 rounded shadow-xl border-neutral-400 bg-slate-800">
             <div class="flex justify-between mb-10">
                 <span>
                     <h3 class="text-2xl"><strong>{{l.name}}</strong></h3>
                     <div class="mt-1.5">{{l.dates}}</div>
                 </span>
                 @if(l.price?.amount){
-                <div class="rounded flex border border-green-600 text-green-600 p-1 px-5 max-lg:hidden">
+                <div class="flex p-1 px-5 text-green-600 border border-green-600 rounded max-lg:hidden">
                     <p class="text-5xl">${{l.price?.amount}}</p>
-                    @if(l.price?.per){<p class="text-xl mt-6 ml-1">/{{l.price?.per}}</p>}
+                    @if(l.price?.per){<p class="mt-6 ml-1 text-xl">/{{l.price?.per}}</p>}
                 </div>
                 }
             </div>
 
-            <ul class="xl:mb-5 max-xl:mb-10 ml-5 list-disc">
+            <ul class="ml-5 list-disc xl:mb-5 max-xl:mb-10">
                 @for(d of l.details; track d){
                 <li>{{d}}</li>
                 }
             </ul>
 
 
-            <div class="flex max-xl:flex-col max-xl:mb-5 justify-between">
+            <div class="flex justify-between max-xl:flex-col max-xl:mb-5">
                 <div class="self-center max-xl:mb-5"><strong>{{l.winnings}}</strong></div>
                 <div class="self-center w-full px-2 mb-5">
                     @if(l.price?.amount){
                     <div
-                        class="rounded flex border border-green-600 text-green-600 py-1 justify-center w-full lg:hidden">
+                        class="flex justify-center w-full py-1 text-green-600 border border-green-600 rounded lg:hidden">
                         <p class="text-3xl">${{l.price?.amount}}</p>
-                        @if(l.price?.per){<p class="text-lg mt-2 ml-1">/{{l.price?.per}}</p>}
+                        @if(l.price?.per){<p class="mt-2 ml-1 text-lg">/{{l.price?.per}}</p>}
                     </div>
                     }
                 </div>
                 <div class="flex flex-col">
-                    <a class="rounded bg-dinks-red hover:bg-dinks-red-dark mb-1 p-2 text-center"
+                    <a class="p-2 mb-1 text-center rounded bg-dinks-red hover:bg-dinks-red-dark"
                         [href]="l.registrationLink">
                         Register
                     </a>
-                    <p class="text-gray-400 text-sm text-center pr-2">*Must be a dinks member to participate</p>
+                    <p class="pr-2 text-sm text-center text-gray-400">*Must be a dinks member to participate</p>
                 </div>
             </div>
         </figure>
@@ -51,12 +51,12 @@
 
 
 <!-- Tournaments -->
-<div id="tournaments" class="container mx-auto px-2 sm:px-6 lg:px-8">
+<div id="tournaments" class="container px-2 mx-auto sm:px-6 lg:px-8">
     <section>
-        <h2 class="text-5xl mb-6 max-xl:text-center font-header">Tournaments</h2>
-        <figure class="grid xl:grid-cols-3 max-xl:grid-cols-1 gap-5">
+        <h2 class="mb-6 text-5xl max-xl:text-center font-header">Tournaments</h2>
+        <figure class="grid gap-5 xl:grid-cols-3 max-xl:grid-cols-1">
             @for(t of tournaments; track t){
-            <div class="grid rounded border-2 content-between border-neutral-400 bg-slate-800 p-5 shadow-xl">
+            <div class="grid content-between p-5 border-2 rounded shadow-xl border-neutral-400 bg-slate-800">
                 <div class="flex justify-between">
                     <span>
                         <h3 class="text-2xl"><strong>{{t.name}}</strong></h3>
@@ -71,13 +71,13 @@
 
                 <div class="flex justify-between">
                     @if(t.price?.amount){
-                    <div class="rounded flex border border-green-600 text-green-600 py-1 px-3">
+                    <div class="flex px-3 py-1 text-green-600 border border-green-600 rounded">
                         <p class="text-2xl">${{t.price?.amount}}</p>
                         @if(t.price?.per){<p class="mt-2 ml-1">/{{t.price?.per}}</p>}
                     </div>
                     } @else {<div></div>}
                     @if(t.registrationLink){
-                    <a class="rounded bg-dinks-red hover:bg-dinks-red-dark px-10 self-center p-2"
+                    <a class="self-center p-2 px-10 rounded bg-dinks-red hover:bg-dinks-red-dark"
                         [href]="t.registrationLink">
                         Register
                     </a>
