pushing to main

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="fixed z-50 w-full top-o">
+<header id="header" class="fixed z-50 w-full top-o">
   <div #banner id="banner"
     class="hidden md:flex relative isolate items-center gap-x-6 overflow-hidden bg-gray-50 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
     <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl"
@@ -121,7 +121,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
