center picture on about on mobile

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,8 +20,10 @@
         <article class="p-5 mb-10 md:md-0">
             <div class="mb-6 lg:grid lg:grid-cols-2">
                 <h2 class="self-center mb-6 text-5xl text-center lg:mb-0 font-header">The Douglass Family</h2>
-                <div class="p-6 rounded shadow-2xl justify-self-start h-10/12 bg-striped rotate-3">
-                    <img src="douglassFamily.jpg" />
+                <div class="flex justify-center">
+                    <div class="p-6 rounded shadow-2xl h-10/12 bg-striped rotate-3">
+                        <img src="douglassFamily.jpg" />
+                    </div>
                 </div>
             </div>
             <p>
@@ -75,8 +77,10 @@
         <article class="p-5">
             <div class="mb-6 lg:grid lg:grid-cols-2">
                 <h2 class="self-center mb-6 text-5xl text-center lg:mb-0 font-header">The Lanning Family</h2>
-                <div class="w-10/12 p-6 rounded shadow-2xl justify-self-start bg-striped -rotate-3">
-                    <img src="lanningFamily.jpg" />
+                <div class="flex justify-center">
+                    <div class="w-10/12 p-6 rounded shadow-2xl bg-striped -rotate-3">
+                        <img src="lanningFamily.jpg" />
+                    </div>
                 </div>
             </div>
             <p>
